fix: deal card text overflowing

--- a/src/components/DealCard/DealCard.scss
+++ b/src/components/DealCard/DealCard.scss
@@ -9,6 +9,7 @@
   color: black;
   display: flex;
   align-items: center;
+  overflow: hidden;
 
   &__container {
     display: flex;
